<resources>
    <string name="app_name">ES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="profile_title">профиль</string>
    <string name="history">История</string>
    <string name="history_title">история</string>
    <string name="main">Главный экран</string>
    <string name="main_title">главный</string>
    <string name="location">локация</string>
    <string name="duty_officer">дежурный</string>
    <string name="search_title">поиск</string>
    <string name="success_update">Данные успешно обновлены</string>
    <string name="no_data_for_selected_period">Данных за данный период нет</string>
    <string name="failure_update">Не удалось обновить данные</string>
    <string name="http_exception_message">Что то пошло не так, ошибка сервера</string>
    <string name="user_not_registered_exception_message">Пользователь не зарегистрирован</string>
    <string name="database_exception_message">Что то пошло не так, ошибка базы данных</string>
    <string name="no_connection_exception_message">Что то пошло не так, нет соединения</string>
    <string name="generic_exception_message">Что то пошло не так</string>
    <string name="arithmetic_exception">ArithmeticException</string>
    <string name="logIn">войти</string>
    <string name="menu_save">Сохранить</string>
    <string name="logOut">Выйти</string>
    <string name="search">Найти</string>
    <string name="cancel">Отмена</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="starting_from">Начиная с:</string>
    <string name="until">До:</string>
    <string name="enter_id">Введите id</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="enter_correct_phone_password">Введите корректный номер телефона и пароль</string>

    <string name="check_internet_connection">Проверьте наличие интернета</string>
    <string name="firebase_db">
        /data/data/com.example.es/databases/location-control-default-rtdb.europe-west1.firebasedatabase.app_default</string>
    <string name="firebase_journal">
        /data/data/com.example.es/databases/location-control-default-rtdb.europe-west1.firebasedatabase.app_default-journal</string>
    <string name="permissions_denied_forever">Разрешения не предоставлены</string>
    <string name="permissions_denied"> Разрешения не предоставлены</string>
    <string name="permissions_denied_message">Для корректной работы приложения разрешите <b><i>\"Доступ к местоположению\"</i></b> а также <b><i>\"Доступ к фото и видео\"</i></b>. \nПерейти в режим настроек предоставления данных?</string>
    <string name="photo_permission_denied_message">Для корректной работы приложения разрешите <b><i>\"Доступ к фото и видео\"</i></b>. \nПерейти в режим настроек предоставления данных?</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="location_mode_disabled">Доступ к местоположению отключен.</string>
    <string name="location_enable_all_sources_message">Для корректной работы приложения разрешите <b><i>\"Доступ к местоположению\"</i></b> а также выберите пункт <b><i>\"По всем источникам\"</i></b> либо <b><i>\"Геолокация Google\"</i></b>. \nПерейти в режим включения доступа?</string>
    <string name="location_permissions_granted">предоставлены разрешения для геолокации</string>
    <string name="home_address">Домашний адрес: %s</string>
    <string name="your_id">Ваш ID: %s</string>
    <string name="comments_template">Комментарий: %s</string>
    <string name="couldnt_save_photo">Не удалось сохранить фото</string>
    <string name="photo_saved">Фото сохранено</string>

    <string-array name="list_affine_formats">
        <item>+1 ([000]) [000]-[00]-[00]</item>
        <item>+2 ([000]) [000]-[00]-[00]</item>
        <item>+3 ([000]) [000]-[00]-[00]</item>
        <item>+4 ([000]) [000]-[00]-[00]</item>
        <item>+5 ([000]) [000]-[00]-[00]</item>
        <item>+6 ([000]) [000]-[00]-[00]</item>
        <item>+8 ([000]) [000]-[00]-[00]</item>
        <item>+9 ([000]) [000]-[00]-[00]</item>
    </string-array>
</resources>