<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_window"
        android:title="@string/main_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/history_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title"
        app:showAsAction="ifRoom" />
</menu>
