<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.SearchFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_start_date"
            style="@style/textView_calendar"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="@string/starting_from"
            android:fontFamily="casual"
            app:drawableStartCompat="@drawable/ic_calendar_focused" />

        <TextView
            android:id="@+id/txt_end_date"
            style="@style/textView_calendar"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="@string/until"
            android:fontFamily="casual"
            app:drawableStartCompat="@drawable/ic_calendar_focused" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/AppMaterialButton"
        android:enabled="false"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/search" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminate="true"
        app:indicatorColor="@color/deep_sky_blue"
        android:visibility="invisible"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_searchFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
</LinearLayout>