<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottomNav_background"
    tools:context=".ui.screens.SplashFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/size_8"
        android:layout_margin="@dimen/margin_16dp"
        android:backgroundTint="@color/main_screen"
        app:cardElevation="@dimen/size_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/margin_16dp"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profileImage"
                style="@style/shapeImageView"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.CircularBorder_8" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_phone"
                style="@style/textInputLayout"
                android:hint="@string/enter_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                style="@style/textInputLayout"
                android:hint="@string/enter_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/button_blue_save"
                android:text="@string/logIn"
                app:backgroundTint="@null" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>