<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.screens.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_60dp"
        android:background="@drawable/profile_bottom_sheet_shape"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_14dp">

        <TextView
            android:id="@+id/txt_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:textStyle="bold"
            tools:text="Company name"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/txt_home_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/home_address"
            tools:text="Address"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/your_id"
            tools:text="ID"
            android:textSize="@dimen/text_size_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/AppMaterialButton"
            android:text="@string/logOut" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        style="@style/profileImageShape"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.CircularBorder"
        app:srcCompat="@drawable/inset_holder_camera" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/camera_icon"
        style="@style/cameraIconShape"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.CircularBorder"
        app:srcCompat="@drawable/inset_holder_camera_black" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>